testsuite/tests/parser/should_fail/pfail026.alan
hello() : proc
  foo : int;
{
  while( *1)
      foo =4;
  foo = 3;
}
