testsuite/tests/parser/should_fail/pfail026.stderr
pfail026.alan:4:10: Error: Parse error on input `*'
	Not a valid condition

